# gameoflife

./: .gitignore  CMakeLists.txt  README.md  conway.config
include/: ConfigFile.h  Resource.h  World.h  debug.h  funcs.h  game.h  tile.h
src/: ConfigFile.cpp  Resource.cpp  World.cpp  debug.cpp  funcs.cpp  game.cpp  main.cpp  tile.cpp
tests/: Makefile  conf_test.txt  config_testing.h  funcs_testing.h  test_runner.cpp
